--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@types/three": "^0.155.1",
+    "@vueuse/core": "^10.4.1",
     "core-js": "^3.8.3",
+    "three": "^0.156.1",
     "vue": "^3.2.13",
     "vue-class-component": "^8.0.0-0",
     "vue-router": "^4.0.3"
@@ -53,7 +56,9 @@
     "parserOptions": {
       "ecmaVersion": 2020
     },
-    "rules": {},
+    "rules": {
+      "vue/multi-word-component-names": "off"
+    },
     "overrides": [
       {
         "files": [
